bynkc/tests/fixtures/negative/254_held_at_boundary/input.bynk
commons c {
  type ServerFrame = { text: String }
  type Bad = {
    conn: Connection[ServerFrame],
  }
}
